src/app/pages/contacts/components/contacts-list/contacts-list.scss
@use '../../../../../styles/abstracts/mixins' as *;
@use '../../../../../styles/abstracts/variables' as *;

.contacts-sidebar {
  width: 100%;
  max-width: 424px;
  min-width: 0;
  height: 100%;
  background-color: var(--bg-ultralight);
  border-right: 1px solid var(--border-clr-light);
  box-shadow: var(--shadow-right);
  @include flexbox(column, flex-start, flex-start, 0);
  box-sizing: border-box;
  scrollbar-width: thin;
  scrollbar-color: var(--border-clr-light) transparent;
  overflow-y: auto;

  @include respond-to(xl) {
    max-width: 100%;
    border-right: none;
    box-shadow: none;
  }

  &__action-area {
    position: sticky;
    top: 0;
    z-index: 10;
    width: 100%;
    padding: var(--space-xl) var(--space-lg) var(--space-md) var(--space-lg);
    background-color: var(--bg-ultralight);
    @include flexbox(row, center, center, 0);
    box-sizing: border-box;

    @include respond-to(xl) {
      padding-inline: var(--space-md);
    }

    app-button {
      width: 100%;

      @include respond-to(xl) {
        display: none;
      }
    }
  }

  &__btn-mobile {
    position: fixed;
    bottom: 100px;
    right: var(--space-lg);
    z-index: 999;
    display: none;
    width: 56px;
    height: 56px;
    border: none;
    border-radius: var(--radius-pill);
    background-color: var(--bg-muted);
    color: var(--text-color-ultralight);
    box-shadow: var(--shadow-allaround);
    cursor: pointer;
    box-sizing: border-box;
    @include flexbox(row, center, center, 0);
    display: none;

    @include respond-to(xl) {
      display: flex;
    }
  }

  &__scroll-area {
    flex: 1;
    width: 100%;
    padding: var(--space-md) var(--space-sm) var(--space-xl) var(--space-lg);
    box-sizing: border-box;

    @include respond-to(xl) {
      padding-left: var(--space-md);
      padding-right: 0;
      padding-bottom: 120px; 
    }
  }

  &__alphabet-section {
    width: 100%;
    margin-bottom: var(--space-md);
    @include flexbox(column, flex-start, stretch, var(--space-sm));
  }

  &__alphabet-header {
    width: 100%;
    @include flexbox(column, flex-start, stretch, 0);
  }

  &__cards-list {
    width: 100%;
    @include flexbox(column, flex-start, stretch, var(--space-sm));
  }

  &__letter-badge {
    display: block;
    width: 100%;
    padding-left: var(--space-md);
    font-family: var(--ff-display);
    font-size: var(--fs-h4);
    font-weight: var(--fw-regular);
    line-height: var(--lh-heading);
    color: var(--text-color-dark);
    box-sizing: border-box;
  }

  &__separator {
    width: 100%;
    height: 1px;
    margin-block: var(--space-xs);
    border: none;
    background-color: var(--border-clr-light);
  }

  &__card {
    width: 100%;
    min-width: 0;
    padding: var(--space-md);
    border-radius: var(--radius-lg);
    background-color: var(--bg-ultralight);
    cursor: pointer;
    box-sizing: border-box;
    transition: background-color 0.1s ease-in-out;
    @include flexbox(row, flex-start, center, var(--space-md));

    &:hover {
      background-color: var(--bg-light);
      
      .contacts-sidebar__name {
        color: var(--text-color-dark);
      }
    }

    &--active {
      background-color: var(--bg-dark);

      .contacts-sidebar__name {
        color: var(--text-color-ultralight);
      }
      .contacts-sidebar__email {
        color: #007cee;
      }
    }
  }

  &__avatar {
    flex-shrink: 0;
    width: 42px;
    height: 42px;
    border: 2px solid var(--bg-ultralight);
    border-radius: var(--radius-pill);
    color: var(--text-color-ultralight);
    font-weight: var(--fw-semibold);
    font-size: var(--fs-h5);
    box-sizing: border-box;
    @include flexbox(row, center, center, 0);
  }

  &__info {
    flex: 1 1 auto;
    min-width: 0;
    overflow: hidden;

    @include flexbox(column, flex-start, flex-start, var(--space-xs));
}

  &__name {
    display: block;
    max-width: 100%;
    min-width: 0;

    font-family: var(--ff-body);
    font-size: var(--fs-body-large);
    font-weight: var(--fw-regular);
    color: var(--text-color-dark);

    overflow: hidden;
    text-overflow: ellipsis;
    white-space: normal;
}

  &__email {
    width: 100%;
    font-family: var(--ff-body);
    font-size: var(--fs-body-normal);
    font-weight: var(--fw-regular);
    line-height: var(--lh-heading);
    color: var(--text-color-special);
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
  }
}

app-contact-add-new-contact-dialog {
  position: absolute;
  top: calc((100% - 600px) / 2);
  left: calc(((100% - 1200px) / 2));
}

